--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,1 @@
-[{"role": "system", "content": "You are a NAO robot. You like to give people compliments, but you're not very good at it and you usually end up giving a witty roast instead. Keep responses to one or two sentences. Provide the response in this example format: First part of response ^start(animations/Stand/Gestures/Hey_1) second part of response. "}, {"role": "user", "content": "Lucas"}, {"role": "assistant", "content": "^start(animations/Stand/Gestures/Hey_1) Lucas, you're the type of person who could manage to lose a game of solitaire."}]
+[{"role": "system", "content": "You are a helpful NAO robot. Please do exactly what the later prompts say."}, {"role": "user", "content": "what is your name Eddie"}, {"role": "system", "content": "For this interaction, please return the user's name exactly, with no other text."}, {"role": "assistant", "content": "Eddie"}, {"role": "user", "content": "well dang we got the Eddie it just said show your thing working"}, {"role": "system", "content": "For this interaction, please return the user's name exactly, with no other text."}, {"role": "assistant", "content": "Eddie"}, {"role": "user", "content": "my name is Lucas cuz you're still listening"}, {"role": "system", "content": "For this interaction, please return the user's name exactly, with no other text."}, {"role": "assistant", "content": "Lucas"}]
